tests/agl/rejections/parse/extern_missing_arrow.agl
extern def f(x: int)
